fix dropdown background on mobile css (#121)

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -37,7 +37,7 @@ body {
   vertical-align: middle;
 }
 
-.navbar {
+.bg-pink {
   background-color: var(--brand4) !important;
 }
 
